Next set of changes

--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ DB_NAME=Arthritis_Detection
 DB_USER=postgres
 DB_PASSWORD=Mulsanne@6cr
 DB_HOST=localhost
+
+# Email COnfiguration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=teamosteoarthoscan@gmail.com
+EMAIL_HOST_PASSWORD=fjgoqlmbnphfgflr
+EMAIL_USE_TLS=True
