--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
+SECRET_KEY = django-insecure-a@4risch@cfywjkovwjvr54-ej)or!083tzdm7+wbjh-jz9y3q
+DEBUG=True
 
-
-#Database Configuration
 DB_NAME=Arthritis_Detection
 DB_USER=postgres
 DB_PASSWORD=Mulsanne@6cr
 DB_HOST=localhost
+DB_HOST=localhost
+
+# Email COnfiguration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=teamosteoarthoscan@gmail.com
+EMAIL_HOST_PASSWORD=fjgoqlmbnphfgflr
+EMAIL_USE_TLS=True
